--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<tittle>DIALOG DRAMA</title>
+		<tittle>
+			DIALOG DRAMA
+			</title>
+			<title>Anggota : Dede Irfan, Kaila, Aluna, M.Zaina, Rei, Siti nur Shiva
+			</title>
 	</head>
 	<body>
 		<h1>SUKSES BUKAN UNTUK ORANG YANG MALAS</h1>
@@ -21,9 +25,14 @@ Tak lama kemudian, Bel tanda masuk sekolahpun berbunyi..
 </p>
 
 <p>Bu Ida : Eh? ini pelajaran ibu bukan?</p>
-<p>Nita : Iya bu.. Sikap Beri salam </p>
-<p>Murid : Assalamualaikum [ Serentak Menjawab ]</p>
-<p>Bu Ida : Waalaikumsalam Wr Wb.</p>
+<p>Nita : Iya bu..</p>
+<p>Nita : Sikap Beri Salam</p>
+<p>Murid : Assalamualaikum [Serentak]</p>
+<p>Bu Ida : Waalaikumsalam, Udah berdoa belum?</p>
+<p>Nita : Belum bu</p>
+<p>Bu Ida : Yaudah, Nita siapkan berdoa..</p>
+<p> [ nita pun menyiapkan berdoa ]</p>
+<p> [ Seusai berdoa ]</p>
 <p>Bu Ida : Hari ini ibu akan menjelaskan mengenai (apa), Tolong diperhatikan ya!
 </p>
 
@@ -107,12 +116,24 @@ Bel pulang pun berbunyi..
 <p>Seminggu kemudian, Pembagian Raport pun tiba</p>
 <p>- TAKE PEMBAGIAN RAPORT -</p>
 <p>(didieu teh kan aya basa basi pembagian raport etamah diinget we aowkwowk)</p>
-<p>Bu Ida : Selamat Ya zeki,  Akhirnya nilai raport kamu Sudah bagus!</p>
+<p>Bu Ida : Selamat Ya ze6ki,  Akhirnya nilai raport kamu Sudah bagus!</p>
 <p>Zeki : Alhamdulillah... Terimakasih buu!</p>
 
 <p>Narrator :
 Zeki pun berjalan ke arah pulang, dan dalam benaknya
 ia pun berkata..</p>
 <p>"Dengan belajar, kira bisa merubah dunia , kalau tidak mampu untuk merubah dunia, setidaknya kita bisa merubah diri kita sendiri."</p>
+<p>
+
+
+</p>
+	</body>
+	<body>
+		<h2> PESAN DAN KESAN </h2>
+		<p> - </p>
+	</body>
+	<body>
+		<h2> KESIMPULAN </h2>
+		<p> Kesimpulan yang dapat diambil, dari drama yang berjudul "Sukses bukan untuk orang yang malas" Adalah janganlah kalian bermalas malasan, bolos, tidak mengerjakan tugas karena sangat berpengaruh pada masa depan. Sekian dari kami mohon maaf bila ada salah kata atau perilaku, terimakasih, Wassalamu'alaikum Wr Wb</p>
 	</body>
 </html>
